[gd_scene load_steps=10 format=3 uid="uid://c7tk7rsiltntg"]

[ext_resource type="Script" path="res://scenes/score_game.gd" id="1_la05d"]
[ext_resource type="FontFile" uid="uid://but58youek45h" path="res://fonts/Montserrat-Bold.ttf" id="1_wt6sv"]
[ext_resource type="Theme" uid="uid://emwqfcq2voo7" path="res://scenes/game_menu.tres" id="3_kkqa8"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ulshh"]
lifetime_randomness = 1.0
emission_shape = 3
emission_box_extents = Vector3(2000, 2000, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
angular_velocity_min = -257.68
angular_velocity_max = 151.58
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 7.0
color = Color(0.411765, 0.701961, 0.905882, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xrj07"]
emission_shape = 3
emission_box_extents = Vector3(2000, 2000, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 7.0
color = Color(0.054902, 0.32549, 0.627451, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bgqqt"]
emission_shape = 3
emission_box_extents = Vector3(2000, 2000, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 7.0
color = Color(0.898039, 0.282353, 0.113725, 1)

[sub_resource type="Animation" id="Animation_iley4"]
resource_name = "coverDisapiar"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_i26bq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8547e"]
_data = {
"RESET": SubResource("Animation_i26bq"),
"coverDisapiar": SubResource("Animation_iley4")
}

[node name="score_game" type="CanvasLayer"]
script = ExtResource("1_la05d")

[node name="Backround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.054902, 0.32549, 0.627451, 1)
theme_override_fonts/font = ExtResource("1_wt6sv")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_kkqa8")

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="Button" type="Button" parent="Control/VBoxContainer2/MarginContainer"]
visible = false
layout_mode = 2
text = "Далее"

[node name="ApairButton" type="Timer" parent="."]

[node name="blue" type="GPUParticles2D" parent="."]
visible = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_ulshh")
lifetime = 20.0
visibility_rect = Rect2(-100, -100, 2000, 2000)

[node name="darkblue" type="GPUParticles2D" parent="."]
visible = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_xrj07")
lifetime = 20.0
visibility_rect = Rect2(-100, -100, 2000, 2000)

[node name="red" type="GPUParticles2D" parent="."]
visible = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_bgqqt")
lifetime = 20.0
visibility_rect = Rect2(-100, -100, 2000, 2000)

[node name="cover" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control")
autoplay = "coverDisapiar"
libraries = {
"": SubResource("AnimationLibrary_8547e")
}

[connection signal="pressed" from="Control/VBoxContainer2/MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="ApairButton" to="." method="_on_apair_button_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
